[package]
name = "get-token"
description = "Get an auth token to use in development"
homepage = "https://github.com/exogee-technology/get-token"
readme = "README.md"
repository = "https://github.com/exogee-technology/get-token"
version = "0.2.0"
authors = ["Kye Lewis <kye.lewis@exogee.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "okta_client"
path = "src/okta_client/lib.rs"

[[bin]]
name = "get-token"
path = "src/cli/main.rs"

[[bin]]
name = "get-token-gui"
path = "src/gui/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
chrono = "0.4"
scraper = "0.12"
pkce = "0.1"
colored = "2"
clipboard = "0.5"
rpassword = "5.0"
clap = "3.0.0-beta.2"
rand = "0.8.3"
base64 = "0.13.0"
